# java-compiler

./: .gitignore  CMakeLists.txt  README.md  example  grammar.txt  main.cpp  test_ast.sh  test_ce.sh  test_ir_tree.sh  test_scope.sh  test_tree.sh
bison/: bison.y
driver/: driver.cpp  driver.hpp
friends_visitors/: friends_visitors
function-mechanisms/address/: Address.h  AddressInFrame.cpp  AddressInFrame.h
irtree/: CMakeLists.txt
irtree/generators/: Label.h  Temporary.h
irtree/nodes/: BaseElement.h  ExpressionList.cpp  ExpressionList.h
irtree/nodes/expressions/: BinopExpression.cpp  BinopExpression.h  CallExpression.cpp  CallExpression.h  ConstExpression.cpp  ConstExpression.h  EseqExpression.cpp  EseqExpression.h  Expression.h  MallocExpression.cpp  MallocExpression.h  MemExpression.cpp  MemExpression.h  NameExpression.cpp  NameExpression.h  TempExpression.cpp  TempExpression.h
irtree/nodes/statements/: AssertStatement.cpp  AssertStatement.h  ExpStatement.cpp  ExpStatement.h  JumpConditionalStatement.cpp  JumpConditionalStatement.h  JumpStatement.cpp  JumpStatement.h  LabelStatement.cpp  (+8 more)
irtree/tree_wrapper/: ExpressionWrapper.cpp  ExpressionWrapper.h  StatementWrapper.cpp  StatementWrapper.h  SubtreeWrapper.h
irtree/types/: BinaryOperatorType.cpp  BinaryOperatorType.h  LogicOperatorType.cpp
irtree/visitors/: BaseElements.h  DoubleCallEliminateVisitor.cpp  DoubleCallEliminateVisitor.h  EseqEliminateVisitor.cpp  EseqEliminateVisitor.h  PrintVisitor.cpp  PrintVisitor.h  Visitor.h  VisitorStruct.h
lexer/: lexer.hpp  lexer.l
nterms/: big_include.hpp  script.py
nterms/assignment/: assignment.cpp  assignment.hpp
nterms/base/: base.hpp
nterms/body/: body.cpp  body.hpp
nterms/class_declaration/: class_declaration.cpp  class_declaration.hpp
nterms/class_declarations/: class_declarations.cpp  class_declarations.hpp
nterms/declaration/: declaration.cpp  declaration.hpp
nterms/declarations/: declarations.cpp  declarations.hpp
nterms/expression/: expression.cpp  expression.hpp
nterms/expressions/: expressions.cpp  expressions.hpp
nterms/field_invocation/: field_invocation.cpp  field_invocation.hpp
nterms/lvalue/: lvalue.cpp  lvalue.hpp
nterms/main_class/: main_class.cpp  main_class.hpp
nterms/method_arg/: method_arg.cpp  method_arg.hpp
nterms/method_args/: method_args.cpp  method_args.hpp
nterms/method_declaration/: method_declaration.cpp  method_declaration.hpp
nterms/method_invocation/: method_invocation.cpp  method_invocation.hpp
nterms/program/: program.cpp  program.hpp
nterms/statement/: statement.cpp  statement.hpp
nterms/statements/: statements.cpp  statements.hpp
nterms/type/: type.cpp  type.hpp
nterms/value/: value.cpp  value.hpp
nterms/variable_declaration/: variable_declaration.cpp  variable_declaration.hpp
scope/: base_scope.hpp
symbols/: base_symbol.hpp  class_symbol.cpp  class_symbol.hpp  method_symbol.cpp  method_symbol.hpp  symbols.hpp  variable_symbol.cpp  variable_symbol.hpp
tests/scope_tree/: test1  test1_expected.txt  test1_result.txt  test2  test2_expected.txt  test2_result.txt  test3  test3_expected.txt  test3_result.txt  test4  test4_expected.txt  test4_result.txt
tests/tree_making/: run.sh  test1  test2  test3  test4
tests/type_errors/: error_declared_in_upper_scope  error_declared_later  error_redeclaration  error_type_1  error_type_2  error_type_3  error_type_4  error_undeclared_class  error_undeclared_var  error_with_arrays  good_example_1  good_example_2
visitor/: delete_visitor.cpp  delete_visitor.hpp  gv_visitor.cpp  gv_visitor.hpp  interpreter_visitor.cpp  interpreter_visitor.hpp  ir_tree_visitor.cpp  ir_tree_visitor.hpp  optimization_visitor.cpp  optimization_visitor.hpp  symbol_table_visitor.cpp  symbol_table_visitor.hpp  template_visitor.cpp  template_visitor.hpp  visitor.hpp  visitor_header_body
(+14 files in other folders)
